@@ -35,7 +35,6 @@ import java.util.Arrays;
 import java.util.Comparator;
 
 import listeners.LoginListener;
-import listeners.SleepListener;
 import listeners.WindowListener;
 
 
@@ -68,7 +67,6 @@ public class Main {
     private static Thread windowListener = null; //see WindowListener.java
     private static Thread messageListener = null; //see MessageListener.java
     private static Thread debuggerThread = null;
-    private static Thread sleepListener = null; //see SleepListener.java
 
     private static Controller controller = null; //this is the queen bee that controls the actual bot and is the native scripting language.
     private static Object currentRunningScript = null; //the object instance of the current running script.
@@ -220,11 +218,6 @@ public class Main {
         windowListener = new Thread(new WindowListener(botFrame, consoleFrame, rscFrame, scroller, logArea, controller));
         windowListener.start();
         log("WindowListener started.");
-        
-        log("Initializing SleepLisetner...");
-        sleepListener = new Thread(new SleepListener(mud, controller));
-        sleepListener.start();
-        log("SleepListener started.");
 
 
         //give everything a nice synchronization break juuuuuuuuuuuuuust in case...
